--- a/index.mjml
+++ b/index.mjml
@@ -44,7 +44,7 @@
     </mj-raw>
     <mj-section padding="0" background-color="#d3fe2a">
       <mj-column>
-        <mj-image padding="0" height="110px" src="http://127.0.0.1:5500/assets/NRClogo.jpeg" alt="image"/>
+        <mj-image padding="0" height="110px" src="http://127.0.0.1:5500/pics/NRClogo.webp" alt="image"/>
       </mj-column>
     </mj-section>
     <mj-raw>
@@ -85,7 +85,7 @@
           </mj-text>
         </mj-column>
         <mj-column padding="0">
-          <mj-image align="left" height="160px" width="200px" padding="0" src="http://127.0.0.1:5500/assets/watch2.avif" alt="image" />
+          <mj-image align="left" height="160px" width="200px" padding="0" src="http://127.0.0.1:5500/pics/watch2.webp" alt="image" />
         </mj-column>
       </mj-group>
     </mj-section>
