--- a/index.mjml
+++ b/index.mjml
@@ -129,10 +129,10 @@
     <mj-section padding="40px 0px" background-color="#ffffff">
       <mj-group>
         <mj-column padding="0px 5px">
-          <mj-image padding="0" align="right" width="150px" height="43px" href="https://apps.apple.com/us/app/nike-run-club-running-coach/id387771637" src="http://127.0.0.1:5500/assets/appstore.png"  alt="apple store link"/>
+          <mj-image padding="0" align="right" width="150px" height="43px" href="https://apps.apple.com/us/app/nike-run-club-running-coach/id387771637" src="assets/appstore.png"  alt="apple store link"/>
         </mj-column>
         <mj-column padding="0px 5px">
-          <mj-image padding="0" align="left" width="150px" height="43px" href="https://play.google.com/store/apps/details?id=com.nike.plusgps&hl=en_US" src="http://127.0.0.1:5500/assets/android.png" alt="android store link"/>
+          <mj-image padding="0" align="left" width="150px" height="43px" href="https://play.google.com/store/apps/details?id=com.nike.plusgps&hl=en_US" src="assets/android.png" alt="android store link"/>
         </mj-column>
       </mj-group>
     </mj-section>
